# mini-articraft

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  record-cassettes.yml  record-tapes.yml  release-preview.yml
benchmarks/: README.md  __init__.py  sdk_benchmark.py
docs/: agent.md  sdk.md
examples/: agent_code.py  animate.py  build_testbed.py  build_testbed2.py  eval_rigs.py  gallery.py
examples/hinged_box/: main.py
examples/mesh_knob/: main.py
scripts/: check_repo_hygiene.py  tape.py
src/mini_articraft/: __init__.py  _child_process.py  compile_feedback.py  compile_result.py  env.py  errors.py  junction_report.py  record.py  settings.py  viewer.html  viewer.py
src/mini_articraft/agent/: __init__.py  events.py  harness.py  sdk_docs.py
src/mini_articraft/agent/tools/: __init__.py  _core.py  _exec.py  _paths.py  compile.py  critique.py  edit.py  exec_command.py  inspect_view.py  read.py  view_image.py  write.py  write_stdin.py
src/mini_articraft/agents/: __init__.py  default.py
src/mini_articraft/cli/: compile.py  mini.py  tui.py
src/mini_articraft/config/: default.yaml
src/mini_articraft/environments/: __init__.py  export.py  local.py  worker.py
src/mini_articraft/models/: __init__.py  gemini.py  openai.py  providers.py
src/mini_articraft/prompts/: critique.md  inspect_view.md  system.md  task.md
src/mini_articraft/recon/: SDK.md  __init__.py  build.py  compare.py  generate.py  mesh.py  probe.py  render.py  rig.py  segment.py  usd.py  verify.py  volume.py
src/mini_articraft/sdk/: __init__.py  _collision.py  _mesh_boolean.py  _mesh_core.py  _mesh_profiles.py  _mesh_refine.py  _mesh_sweeps.py  _mesh_weld.py  _section_loft.py  _shell_partition.py  errors.py  export.py  joints.py  mesh.py  object.py  section_loft.py  shell_partition.py  testing.py
src/mini_articraft/sdk/docs/build123d/: OpenSCAD.md  README.md  VENDORED.md  algebra_definition.md  algebra_performance.md  assemblies.md  build123d_all_docs_llm.md  build_line.md  build_part.md  build_sketch.md  center.md  debugging_logging.md  examples_1.md  index.md  introduction.md  introductory_examples.md  joints.md  key_concepts.md  key_concepts_algebra.md  key_concepts_builder.md  location_arithmetic.md  manifest.csv  manifest.json  moving_objects.md  objects.md  operations.md  tech_drawing_tutorial.md  tips.md  topology_selection.md  tttt.md  tutorial_constraints.md  tutorial_design.md  tutorial_joints.md  tutorial_lego.md  tutorial_selectors.md  tutorial_stl_reconstruction.md  tutorial_surface_modeling.md
src/mini_articraft/sdk/docs/build123d/assets/ttt/: ttt-23-02-02-sm_hanger.py
src/mini_articraft/sdk/docs/build123d/examples/: bracelet.py  toy_truck.py
src/mini_articraft/sdk/docs/build123d/markdown/: OpenSCAD.md  advanced.md  algebra_definition.md  algebra_performance.md  assemblies.md  build_line.md  build_part.md  build_sketch.md  builder_api_reference.md  builders.md  center.md  cheat_sheet.md  debugging_logging.md  direct_api_reference.md  examples_1.md  external.md  general_index.md  import_export.md  indices_and_tables.md  installation.md  introduction.md  introductory_examples.md  joints.md  key_concepts.md  key_concepts_algebra.md  key_concepts_builder.md  location_arithmetic.md  moving_objects.md  objects.md  operations.md  python_module_index.md  tech_drawing_tutorial.md  tips.md  topology_filter_examples.md  topology_group_examples.md  topology_selection.md  topology_sort_examples.md  tttt.md  tutorial_constraints.md  tutorial_design.md  (+8 more)
src/mini_articraft/sdk/docs/build123d/snippets/: conf.py  constraint_examples.py  objects_1d_airfoil.py  objects_1d_bspline.py  objects_1d_constrained.py  objects_1d_ellipticalstartarc.py
src/mini_articraft/sdk/docs/cadquery/: 35_cadquery.md  36_cadquery_primer.md  37_cadquery_workplane.md  38_cadquery_sketch.md  39_cadquery_assembly.md  39b_cadquery_free_function.md  39c_cadquery_api_ref.md
src/mini_articraft/sdk/docs/common/: 00_quickstart.md  10_errors.md  20_core_types.md  30_articulated_object.md  35_joints.md  40_export.md  40_testing.md  50_usdz_export.md
src/mini_articraft/sdk/docs/examples/: bladed_rotor.py  captured_pin_hinge.py  flip_lid_housing.py  hollow_shell.py  mixed_articulated_assembly.py  molded_mug.py  section_loft_with_wires.py  variable_sweep_and_loft.py
src/mini_articraft/sdk/docs/mesh/: 00_mesh_geometry.md  10_profiles.md  20_wires_and_sweeps.md  30_section_lofts.md  40_booleans_and_shells.md  50_refinement_and_smoothing.md
tests/: README.md  _compile_server.py  conftest.py  harness.py  test_agent_harness.py  test_agent_scenarios.py  test_agent_tools.py  test_articulation_motion.py  test_cli.py  test_compile.py  test_compile_feedback.py  test_critique.py  test_environment_export.py  test_examples.py  test_exec_unit.py  test_exec_volume.py  test_gemini_model.py  test_harness.py  test_inspect_view.py  test_junction_report.py  test_live_generation.py  test_mesh_refinement.py  test_mesh_sdk.py  test_mesh_weld.py  test_openai_model.py  test_recon_usd.py  test_record.py  test_sdk.py  test_sdk_docs.py  test_sdk_export.py  test_tape_cli.py  test_tape_fixture.py  test_testing_sdk.py  test_tui.py  test_viewer.py
tests/cassettes/: test_box_generation.jsonl
typings/pxr/: Gf.pyi  Sdf.pyi  Tf.pyi  Usd.pyi  UsdGeom.pyi  UsdPhysics.pyi  UsdUtils.pyi  UsdValidation.pyi  __init__.pyi
