[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-articraft"
dynamic = ["version"]
description = "A small reference agent for generating articulated build123d objects."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "mini-articraft contributors" }]
dependencies = [
    "build123d>=0.11.0",
    "numpy>=1.26",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "python-fcl>=0.7.0.11",
    "rich>=13.0.0",
    "trimesh>=4.11.3",
    "typer>=0.12.0",
    "usd-core>=26.5",
    "websockets>=15.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
mini-articraft = "mini_articraft.cli.mini:main"
mini-articraft-compile-run = "mini_articraft.environments.worker:main"

[tool.uv]
required-version = ">=0.9.0"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "mini_articraft.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mini_articraft*"]

[tool.setuptools.package-data]
mini_articraft = [
    "py.typed",
    "prompts/*.md",
    "sdk/docs/common/*.md",
    "sdk/docs/build123d/*.md",
    "sdk/docs/build123d/assets/*",
    "sdk/docs/build123d/assets/*/*",
    "sdk/docs/build123d/examples/*",
    "sdk/docs/build123d/media/*",
    "sdk/docs/build123d/snippets/*",
]

[tool.basedpyright]
include = ["src", "tests", "scripts"]
# The vendored build123d doc snippets are agent-facing content, not package code.
exclude = ["src/mini_articraft/sdk/docs"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "-m 'not volume'"
markers = [
    "volume: opt-in load/concurrency stress tests (run with `-m volume`)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "src/mini_articraft/sdk/docs/build123d/assets",
    "src/mini_articraft/sdk/docs/build123d/examples",
    "src/mini_articraft/sdk/docs/build123d/snippets",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
